# vodka-az

./: .gitignore  .mise.toml  Chart.yaml  Dockerfile  Makefile  README.md  pyproject.toml  values.yaml
.github/workflows/: workflow.yml
chart/: values.yaml
chart/templates/: secrets.yaml  service-account.yaml  update-handler.yaml
src/az/: __main__.py  bot.py  config.py  init.py
templates/: secrets.yaml  update-handler.yaml
