[tool.poetry]
name = "vodka-az"
description = "Vodka A-Z"
version = "1.0.0"
authors = ["OpenAlcoholics <team@openalcoholics.group>"]
license = "MIT"
packages = [
    { include = "az", from = "src" }
]

[[tool.poetry.source]]
name = "internal"
url = "https://pypi.bjoernpetersen.net"
priority = "explicit"

[tool.poetry.dependencies]
bs-config = { version = "1.0.2", extras = ["dotenv"], source = "internal" }
certifi = "2024.6.2"
click = "^8.1.3"
# dictated by python-telegram-bot
httpx = "*"
openai = "^1.0.0"
python = "~3.12"
python-telegram-bot = "21.3"
sentry-sdk = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "~1.10"
pytest = "^8.0.0"
ruff = "0.5.0"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[tool.ruff]
extend-select = [
    "I001",
]

[tool.ruff.isort]
known-first-party = ["az"]
